--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico" />
     <title>Topfived</title>
+    <meta name="description" content="Topfived - Your Top 5 Lists" />
+    <meta name="keywords" content="Top 5, Lists, Ranking, Favorites" />
+    <meta name="author" content="Topfived Team" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
