--- a/index.html
+++ b/index.html
@@ -50,12 +50,78 @@
       }
     }
     </script>
+
+    <style>
+      body, html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+      }
+      #loader {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #1a1a1a;
+        z-index: 9999;
+        transition: opacity 0.5s ease-out;
+      }
+      #loader.fade-out {
+        opacity: 0;
+      }
+      .loader-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+      .loader-logo {
+        width: 100px;
+        height: 100px;
+        object-fit: contain;
+        margin-bottom: 20px;
+        animation: pulse 1.5s infinite ease-in-out;
+      }
+      @keyframes pulse {
+        0% { transform: scale(0.95); }
+        50% { transform: scale(1.05); }
+        100% { transform: scale(0.95); }
+      }
+      .loader-text {
+        font-family: 'Inter', Arial, sans-serif;
+        font-size: 18px;
+        color: #ffffff;
+        margin-top: 20px;
+      }
+      .loader-spinner {
+        border: 4px solid #f3f3f3;
+        border-top: 4px solid #3498db;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        animation: spin 1s linear infinite;
+      }
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+    </style>
   </head>
   <body>
-    <div id="loader" style="display: flex; justify-content: center; align-items: center; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: black; z-index: 9999;">
-      <img src="/assets/images/mobile.png" alt="Topfived is loading..." />
+    <div id="loader">
+      <div class="loader-content">
+        <img src="/assets/images/mobile.png" alt="Topfived Logo" class="loader-logo">
+        <div class="loader-spinner"></div>
+        <div class="loader-text">Topfived is loading...</div>
+      </div>
     </div>
+
     <div id="root"></div>
+    
     <script type="module" src="/src/main.tsx"></script>
     
     <!-- Accessibility -->
