--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico" />
-    <title>Topfived - Create and Share Your Top 5 Lists | Ranking Platform</title>
-    <meta name="description" content="Topfived is the ultimate platform for creating, sharing, and discovering top 5 lists. Rank your favorites, debate with others, and explore trending topics across various categories." />
+    <title>Topfived - Where Your World's Opinions Are Organized | Recommendations Platform</title>
+    <meta name="description" content="Topfived is the ultimate platform for creating, sharing, and discovering organized opinions." />
     <meta name="keywords" content="Top 5, Lists, Ranking, Favorites, User-generated Content, Social Ranking, Debate Platform" />
     <meta name="author" content="Topfived Team" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.topfived.com/" />
-    <meta property="og:title" content="Topfived - Your Top 5 Lists Platform" />
-    <meta property="og:description" content="Create, share, and discover top 5 lists on Topfived. Join the community of rankers and debaters!" />
+    <meta property="og:title" content="Topfived - Where Your World's Opinions Are Organized" />
+    <meta property="og:description" content="Create, share, and discover organized opinions on Topfived. Join the community of know-it-alls!" />
     <meta property="og:image" content="https://www.topfived.com/assets/images/og-image.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.topfived.com/" />
-    <meta property="twitter:title" content="Topfived - Your Top 5 Lists Platform" />
-    <meta property="twitter:description" content="Create, share, and discover top 5 lists on Topfived. Join the community of rankers and debaters!" />
+    <meta property="twitter:title" content="Topfived - YWhere Your World's Opinions Are Organized" />
+    <meta property="twitter:description" content="Create, share, and discover organized opinions on Topfived. Join the community of know-it-alls!" />
     <meta property="twitter:image" content="https://www.topfived.com/assets/images/twitter-image.jpg" />
 
     <!-- Canonical URL -->
@@ -42,7 +42,7 @@
       "@type": "WebSite",
       "name": "Topfived",
       "url": "https://www.topfived.com",
-      "description": "Create and share your top 5 lists on various topics. Engage in debates and discover trending rankings.",
+      "description": "Create, share, and discover organized opinions on Topfived. Join the community of know-it-alls!",
       "potentialAction": {
         "@type": "SearchAction",
         "target": "https://www.topfived.com/search?q={search_term_string}",
