--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <meta property="og:url" content="https://www.topfived.com/" />
     <meta property="og:title" content="Topfived - Where Your World's Opinions Are Organized" />
     <meta property="og:description" content="Create, share, and discover organized opinions on Topfived. Join the community of know-it-alls!" />
-    <meta property="og:image" content="https://www.topfived.com/assets/images/og-image.jpg" />
+    <meta property="og:image" content="https://www.topfived.com/assets/images/og-image.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.topfived.com/" />
     <meta property="twitter:title" content="Topfived - YWhere Your World's Opinions Are Organized" />
     <meta property="twitter:description" content="Create, share, and discover organized opinions on Topfived. Join the community of know-it-alls!" />
-    <meta property="twitter:image" content="https://www.topfived.com/assets/images/twitter-image.jpg" />
+    <meta property="twitter:image" content="https://www.topfived.com/assets/images/twitter-image.png" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.topfived.com/" />
@@ -86,11 +86,7 @@
         margin-bottom: 20px;
         animation: pulse 1.5s infinite ease-in-out;
       }
-      @keyframes pulse {
-        0% { transform: scale(0.95); }
-        50% { transform: scale(1.05); }
-        100% { transform: scale(0.95); }
-      }
+      
       .loader-text {
         font-family: 'Inter', Arial, sans-serif;
         font-size: 18px;
@@ -114,7 +110,7 @@
   <body>
     <div id="loader">
       <div class="loader-content">
-        <img src="/assets/images/mobile.png" alt="Topfived Logo" class="loader-logo">
+        <img src="/assets/images/mobile2.png" alt="Topfived Logo" class="loader-logo">
         <div class="loader-spinner"></div>
         <div class="loader-text">Topfived is loading...</div>
       </div>
