--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.topfived.com/" />
-    <meta property="twitter:title" content="Topfived - YWhere Your World's Opinions Are Organized" />
+    <meta property="twitter:title" content="Topfived - Where Your World's Opinions Are Organized" />
     <meta property="twitter:description" content="Create, share, and discover organized opinions on Topfived. Join the community of know-it-alls!" />
     <meta property="twitter:image" content="https://www.topfived.com/assets/images/twitter-image.png" />
 
